<resources>
    <string name="app_name">匹诺</string>
    <string name="app_slogen">匹诺，让 “Ta” 透明一点</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登 录</string>
    <string name="title_activity_register">注 册</string>
    <string name="title_activity_chooseentertype">选择进入类型</string>
    <string name="title_activity_register_yszc">隐私政策</string>
    <string name="title_activity_child">匹诺-监控中</string>
    <string name="title_activity_unlockaction">解锁功能</string>
    <string name="title_activity_guanfang">官方活动</string>
    <string name="dialog_makesure">确 认</string>
    <string name="dialog_cancle">取 消</string>

    <string name="title_activity_ask_request">申请控制列表</string>
    <string name="title_activity_controldevice_list">控制端列表</string>


    <string name="menu_qrcode">扫一扫</string>
    <string name="menu_refresh_action">刷新功能列表</string>



    <string name="ask_list">申请列表</string>
    <string name="control_list">主控列表</string>
    <string name="add_enter_search">申请添加</string>
    <string name="permission_up">隐私提权</string>
    <string name="add_enter_des">(输入被控账号,发送控制请求,需对方同意)</string>
    <string name="add_qrcode_des">(扫描被控账号二维码，可直接控制被控账号)</string>
    <string name="ask_resaon">请求备注</string>

    <string name="ask_need_password_tilte">此操作需要您输入密码</string>
    <string name="ask_need_password_hint">输入登录账户的密码</string>

    <string name="add_qrcode_search">二维码扫描</string>
    <string name="add_qrcode_search_usephoto">二维码图片扫描</string>

    <string name="add_qrcode_search_alert_title">申请控制提示</string>

    <string name="add_ask_request_caozuo_alert_title">处理提示</string>

    <string name="app_register_waring">点击上面的“注册”按钮，即表示你同意 《匹诺隐私政策》 </string>
    <string name="device_testnumber_nick">匹诺功能体验</string>
    <string name="device_testnumber_des">点此进入可以“免费”体验匹诺“所有功能”</string>

    <string name="device_sys_autocreate_childnumber_des">您需要在其他设备上登录“%1$s”（密码同当前登录账号密码一致），既可操作 %2$s 登录的设备</string>

    <string name="action_childshow_qrcode_des">(扫描上方的二维码,即可操控该设备)</string>

    <string name="app_register_waring_name"></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">用户名</string>
    <string name="prompt_password">密 码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_register_in">注 册</string>
    <string name="error_user_length">用户名长度不得低于6位</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">不可为空</string>
    <string name="error_field_password">密码错误</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>

    <string name="title_activity_call">语音监控</string>
    <string name="videoCall_endCall">挂断电话</string>
    <string name="videoCall_mkf">麦克风</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Strings related to fragment addchildcontrol -->
    <string name="child_number">被监控账号</string>
    <string name="child_password">被监控账号密码（control password）</string>
    <string name="child_register">确认并注册（regist）</string>

    <!-- 锁屏-->
    <string name="activity_lockscreen_title">锁屏操作</string>
    <string name="activity_lockscreen_enpty_password">输入锁屏密码</string>
    <string name="activity_enterpsw">输入锁屏密码</string>
    <string name="activity_lockscreen_submit">确认锁屏</string>
    <string name="activity_lockscreen_cancle">解锁屏幕</string>
    <string name="activity_lockscreen_tick">密码为空，则会清除锁屏密码！</string>
    <string name="activity_lockscreen_mdm_activity_success">授权成功</string>
    <string name="activity_lockscreen_mdm_activity_failed">授权失败,远程锁屏将不可用</string>
    <string name="activity_lockscreen_mdm_des">请您激活设备管理器，激活此功能后，可以进行锁屏控制。</string>

    <string name="activity_webqrpay_title">支付解锁</string>

    <string name="activity_qrcode_title">扫一扫</string>

    <string name="refresh_success">已刷新</string>


    <string name="device_rename_des">请输入备注名</string>

    <string name="acc_ser_lable">匹诺监控辅助功能</string>

    <string name="acc_ser_des">匹诺监控辅助功能,有助于您查看获取该手机的用户行为</string>


    <string name="action_cmd_user_activity">行为监控</string>
</resources>
