<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" android:background="@color/activity_bg"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lfish.control.user.login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent" android:gravity="center_vertical"
                android:layout_height="wrap_content" >
            <ImageView
                android:layout_width="20dp" android:layout_centerVertical="true"
                android:layout_height="20dp" android:src="@drawable/ico_username" />
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_phone"
                    android:inputType="textPhonetic" android:maxLines="1" android:layout_marginLeft="20dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent" android:gravity="center_vertical"
                android:layout_height="wrap_content" >
                <ImageView
                    android:layout_width="18dp" android:layout_centerVertical="true"
                    android:layout_height="18dp" android:src="@drawable/icp_password" />
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short" android:layout_marginLeft="20dp"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
</RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal" android:weightSum="2">
                <Button android:id="@+id/email_regiser_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_register_in"
                    android:textStyle="bold"  android:layout_weight="1" />
                <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                    android:textStyle="bold"  android:layout_weight="1" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
